Fix #53, #43 avoid change `!` near the alphabet.
Ref: https://github.com/mdn/translated-content/pull/5954

--- a/tests/fixtures/latex.fixed.tex
+++ b/tests/fixtures/latex.fixed.tex
@@ -13,7 +13,7 @@
 	让我们开始 Rust 之旅！有很多内容需要学习，但每次旅程总有起点。在本章中，我们会讨论：
 	
 	1. 在 Linux、macOS 和 Windows 上安装 Rust
-	2. 编写一个打印 Hello, world！的程序
+	2. 编写一个打印 Hello, world! 的程序
 	3. 使用 Rust 的包管理器和构建系统 cargo
 \section{常见编程概念}
 	\subsection{变量和可变性}
