--- a/install
+++ b/install
@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/bin/sh
 get_latest_release() {
 	curl --silent "https://api.github.com/repos/$repo/releases/latest" | # Get latest release from GitHub api
 		grep '"tag_name":' |                                            # Get tag line
